p2/confs/apps.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1
  labels:
    app: app1
spec:
  replicas: 1
  selector:
    matchLabels: {app: app1}
  template:
    metadata:
      labels: {app: app1}
    spec:
      containers:
      - name: hello-kubernetes
        image: paulbouwer/hello-kubernetes:1.10.1
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: app1
spec:
  type: ClusterIP
  selector:
    app: app1
  ports:
  - port: 80
    targetPort: 8080

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2
  labels:
    name: app2
spec:
  replicas: 3
  selector:
    matchLabels: {app: app2}
  template:
    metadata:
      labels: {app: app2}
    spec:
      containers:
      - name: hello-kubernetes
        image: paulbouwer/hello-kubernetes:1.10.1
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: app2
spec:
  type: ClusterIP
  selector:
    app: app2
  ports:
  - port: 80
    targetPort: 8080

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app3
  labels:
    name: app3
spec:
  replicas: 1
  selector:
    matchLabels: {app: app3}
  template:
    metadata:
      labels: {app: app3}
    spec:
      containers:
      - name: hello-kubernetes
        image: paulbouwer/hello-kubernetes:1.10.1
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: app3
spec:
  type: ClusterIP
  selector:
    app: app3
  ports:
  - port: 80
    targetPort: 8080
